--- a/requirements.txt
+++ b/requirements.txt
@@ -1,13 +1,19 @@
 anyio==3.6.2
 click==8.1.3
 colorama==0.4.6
+ecdsa==0.18.0
 fastapi==0.95.0
 greenlet==2.0.2
 h11==0.14.0
 idna==3.4
 Jinja2==3.1.2
 MarkupSafe==2.1.2
+passlib==1.7.4
+pyasn1==0.4.8
 pydantic==1.10.7
+python-jose==3.3.0
+rsa==4.9
+six==1.16.0
 sniffio==1.3.0
 SQLAlchemy==2.0.8
 starlette==0.26.1
