--- a/requirements.txt
+++ b/requirements.txt
@@ -12,6 +12,7 @@ passlib==1.7.4
 pyasn1==0.4.8
 pydantic==1.10.7
 python-jose==3.3.0
+python-multipart==0.0.6
 rsa==4.9
 six==1.16.0
 sniffio==1.3.0
