--- a/requirements.txt
+++ b/requirements.txt
@@ -1,8 +1,11 @@
 anyio==3.6.2
 click==8.1.3
 colorama==0.4.6
+dnspython==2.3.0
 ecdsa==0.18.0
+email-validator==2.0.0.post1
 fastapi==0.95.0
+fastapi-offline==1.5.2
 greenlet==2.0.2
 h11==0.14.0
 idna==3.4
